--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="assets/js/popper.js"></script>
     <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <link rel="stylesheet" href="assets/css/style-custom.css">
+     <link rel="stylesheet" href="assets/css/font-awesome.css">
     
     
     <style type="text/css">
